--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -158,6 +158,9 @@ header, footer {
 .text-verde {
   color: #0e8029 !important; /* Verde escuro */
 }
+.text-wite {
+  color: #fff !important; /* Branco */
+}
 
 
 
